# exceptions

./: .gitignore  CMakeCPack.cmake  CMakeLists.txt  CPack.Description.txt  CTestConfig.cmake  Contract.cpp  Contract.h  Exception.h  Makefile  README.md  bug.h  bug.hpp  contract.cpp  contract.evc4.cpp  contract.h  contract.hpp  contract.other.cpp  contract.posix.cpp  contract.win32.cpp  exception.h  exception.hpp  exceptions-config.cmake  test.cpp
.github/workflows/: build-exceptions.yml
Details/: prologue.h
cmake/: exceptionsConfig.cmake.in
details/: prologue.h  prologue.hpp
src/: CMakeLists.txt  contract.hpp  contract.posix.cpp  contract.win32.cpp  exception.hpp  src
tests/: CMakeLists.txt  bug.cpp  exceptions.cpp
tests/use_target/: CMakeLists.txt  use_exceptions.cpp
